| Summary: | ASTERISK-29001: chan_pjsip does not process or forward 181 responses | ||
| Reporter: | Torrey Searle (tsearle) | Labels: | |
| Date Opened: | 2020-07-22 03:27:57 | Date Closed: | 2020-08-26 13:10:24 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_diversion |
| Versions: | 16.7.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | I found that asterisk currently doesn't forward 181 responses it receives. Upon investigation, I found that handle_response in res_pjsip_diversion is only getting called for 302 redirect (even though the code is clearly setup to also handle 181 responses)
Also I found this code isn't generating the AST_CONTROL_REDIRECTION to inform the bridged endpoint that a redirection is occurring. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-07-22 03:27:59.326-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-08-26 13:10:25.967-0500 Change 14764 merged by Friendly Automation: res_pjsip_diversion: handle 181 [https://gerrit.asterisk.org/c/asterisk/+/14764|https://gerrit.asterisk.org/c/asterisk/+/14764] By: Friendly Automation (friendly-automation) 2020-08-26 13:13:53.779-0500 Change 14763 merged by Friendly Automation: res_pjsip_diversion: handle 181 [https://gerrit.asterisk.org/c/asterisk/+/14763|https://gerrit.asterisk.org/c/asterisk/+/14763] By: Friendly Automation (friendly-automation) 2020-08-26 13:15:30.047-0500 Change 14690 merged by Friendly Automation: res_pjsip_diversion: handle 181 [https://gerrit.asterisk.org/c/asterisk/+/14690|https://gerrit.asterisk.org/c/asterisk/+/14690] By: Friendly Automation (friendly-automation) 2020-08-26 13:15:59.313-0500 Change 14758 merged by Friendly Automation: res_pjsip_diversion: handle 181 [https://gerrit.asterisk.org/c/asterisk/+/14758|https://gerrit.asterisk.org/c/asterisk/+/14758] By: Friendly Automation (friendly-automation) 2020-08-27 08:04:32.218-0500 Change 14756 merged by George Joseph: res_pjsip_diversion: handle 181 [https://gerrit.asterisk.org/c/asterisk/+/14756|https://gerrit.asterisk.org/c/asterisk/+/14756] | ||